# steerable_pdo_experiments

./: .gitignore  LICENSE  README.md  calculate_dataset_stats.py  environment.yml  figures.py  install.sh  main.py  pyproject.toml  results.py  run_stl.sh  setup.py
config/: config.yaml
config/data/: mnist_rot.yaml
config/experiment/: diffop_3x3.yaml  diffop_5x5.yaml  kernel_3x3.yaml  kernel_5x5.yaml  vanilla_3x3.yaml  vanilla_5x5.yaml
config/model/: base.yaml  cnn.yaml  diffop.yaml  e2cnn_exp.yaml
diffop_experiments/: __init__.py  mnist_rot.py  model.py  utils.py
job_scripts/: debug.sh  diffop_3x3_fd.sh  diffop_3x3_fd_irreps.sh  diffop_3x3_fd_quotient.sh  diffop_3x3_fd_restrict.sh  diffop_3x3_gauss.sh  diffop_3x3_gauss_irreps.sh  diffop_3x3_gauss_quotient.sh  diffop_3x3_gauss_restrict.sh  diffop_3x3_rbffd.sh  diffop_3x3_rbffd_irreps.sh  diffop_3x3_rbffd_quotient.sh  diffop_3x3_rbffd_restrict.sh  diffop_5x5_fd.sh  diffop_5x5_fd_irreps.sh  diffop_5x5_fd_pdo_basis.sh  diffop_5x5_fd_quotient.sh  diffop_5x5_fd_restrict.sh  diffop_5x5_gauss.sh  diffop_5x5_gauss_irreps.sh  diffop_5x5_gauss_pdo_basis.sh  diffop_5x5_gauss_quotient.sh  diffop_5x5_gauss_restrict.sh  diffop_5x5_rbffd.sh  diffop_5x5_rbffd_irreps.sh  diffop_5x5_rbffd_quotient.sh  diffop_5x5_rbffd_restrict.sh  kernel_3x3.sh  kernel_3x3_irreps.sh  kernel_3x3_quotient.sh  kernel_3x3_restrict.sh  kernel_5x5.sh  kernel_5x5_irreps.sh  kernel_5x5_quotient.sh  kernel_5x5_restrict.sh  stl10_fd.sh  stl10_gaussian.sh  stl10_kernel.sh  stl10_rbffd.sh  vanilla_3x3.sh  (+1 more)
stl_experiments/: README.md
(+8 files in other folders)
