[tool.poetry]
name = "steerable_pdo_experiments"
version = "0.1.0"
description = "Experiments for the Steerable PDO paper"
authors = ["Erik Jenner <erik.jenner99@gmail.com>"]
license = "BSD Clear"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "^1.21.1"
torch = "^1.9.0"
scikit-image = "^0.18.2"
scipy = "^1.7.0"
sympy = "^1.8"
torchvision = "^0.10.0"
hydra-core = "^1.1.0"
pytorch-lightning = "^1.4.0"
torchmetrics = "^0.4.1"
PyYAML = "^5.4.1"
wandb = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
